# kestrel-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: java.yml  rust.yml
crates/kanalyze/: Cargo.toml
crates/kanalyze/src/: batch.rs  concurrent.rs  condition.rs  lib.rs
crates/kanalyze/src/comp/: mod.rs  reader.rs
crates/kanalyze/src/io/: ikc.rs  mod.rs
crates/kanalyze/src/module/: count.rs  mod.rs
crates/kanalyze/src/util/: base.rs  kmer.rs  kmer_counter.rs  kmer_hash_set.rs  mod.rs  sequence_name_table.rs  string.rs  system.rs
crates/kestrel/: Cargo.toml
crates/kestrel/benches/: pipeline.rs
crates/kestrel/src/: cli.rs  constants.rs  hapwriter.rs  io.rs  lib.rs  log_level.rs  runner.rs  varfilter.rs  variant.rs  writer.rs
crates/kestrel/src/activeregion/: mod.rs
crates/kestrel/src/align/: mod.rs
crates/kestrel/src/counter/: mod.rs
crates/kestrel/src/interval/: mod.rs
crates/kestrel/src/refreader/: mod.rs
crates/kestrel/src/util/: digest.rs  info.rs  mod.rs  number.rs  system.rs
crates/kestrel/tests/: cli_parity.rs  jr_traversal.rs  vntyper_fastq_parity.rs
crates/kestrel/tests/fixtures/: jr_counts.tsv
docs/: kanalyze-publishing.md
fixtures/refreader/: DESCRIPTION
scripts/: instrument-java-addbase.sh  vntyper-verify.sh
