[package]
name = "kanalyze"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bstr.workspace = true
crossbeam-channel.workspace = true
noodles-fasta.workspace = true
noodles-fastq.workspace = true
thiserror.workspace = true
tracing.workspace = true
unicode_names2.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
