[package]
name = "kestrel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bstr.workspace = true
clap.workspace = true
kanalyze.workspace = true
md-5.workspace = true
noodles-bam.workspace = true
noodles-bed.workspace = true
noodles-fasta.workspace = true
noodles-fastq.workspace = true
noodles-sam.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true

[[bench]]
name = "pipeline"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
